reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_enum_documented-2.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_input_typescript_code :: < TestEnumDocumented::<u8> > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    input_test: (
      input: reflectapi_demo.tests.basic.TestEnumDocumented<number /* u8 */>,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<{}, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace basic {
      /**
       * Some Enum docs
       * more
       */
      export type TestEnumDocumented<T> =
        /**
         * Variant1 docs
         */
        | {
            Variant1: /**
             * variant1 field docs
             */
            T;
          }
        /**
         * Variant2 docs
         * multiline
         * more
         * more
         */
        | {
            Variant2: {
              /**
               * named field variant2 field docs
               */
              named_field: T;
            };
          };
    }
  }
}

namespace __implementation {

  function input_test(client: Client) {
    return (
      input: reflectapi_demo.tests.basic.TestEnumDocumented<number /* u8 */>,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.basic.TestEnumDocumented<number /* u8 */>,
        {},
        {},
        {}
      >(client, "/input_test", input, headers, options);
  }
}
