reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_enum_documented-3.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_input_rust_code :: < TestEnumDocumented::<u8> > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn input_test(
            &self,
            input: super::types::reflectapi_demo::tests::basic::TestEnumDocumented<u8>,
            headers: reflectapi::Empty,
        ) -> Result<reflectapi::Empty, reflectapi::rt::Error<reflectapi::Empty, C::Error>> {
            reflectapi::rt::__request_impl(&self.client, "/input_test", input, headers).await
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod basic {

                /// Some Enum docs
                /// more
                #[derive(Debug, serde::Serialize)]
                pub enum TestEnumDocumented<T> {
                    /// Variant1 docs
                    Variant1(
                        /// variant1 field docs
                        T,
                    ),
                    /// Variant2 docs
                    /// multiline
                    /// more
                    /// more
                    Variant2 {
                        /// named field variant2 field docs
                        named_field: T,
                    },
                }
            }
        }
    }
}
