reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_enum_with_skip_variant.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::basic::input::TestEnumWithSkipVariant"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::basic::output::TestEnumWithSkipVariant"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::basic::input::TestEnumWithSkipVariant",
        "variants": [
          {
            "name": "A",
            "fields": "none"
          },
          {
            "name": "I",
            "fields": "none"
          }
        ]
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::basic::output::TestEnumWithSkipVariant",
        "variants": [
          {
            "name": "A",
            "fields": "none"
          },
          {
            "name": "O",
            "fields": "none"
          }
        ]
      }
    ]
  }
}
