reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_response_headers-2.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: typescript
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name: response_headers_test

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    infallible: (
      input: {},
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<{}, {}, reflectapi_demo.tests.basic.ResponseHeaders>;
    before: BeforeInterface;
    with: WithInterface;
  }

  export interface BeforeInterface {
    default: (
      input: {},
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<{}, reflectapi_demo.tests.basic.ResponseHeadersTestError>;
  }

  export interface WithInterface {
    default: (
      input: {},
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      {},
      reflectapi_demo.tests.basic.ResponseHeadersTestError,
      reflectapi_demo.tests.basic.ResponseHeaders
    >;
    route_headers: (
      input: {},
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      {},
      reflectapi_demo.tests.basic.ResponseHeadersTestError,
      reflectapi_demo.tests.basic.RouteResponseHeaders
    >;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace basic {
      export type CacheStatus = "Hit" | "Miss";

      export interface ResponseHeaders {
        /**
         * Seconds, or an HTTP date, after which to retry
         */
        "retry-after": string | null;
        "x-request-id": string | null;
        "x-expires-at": string | null;
        "x-cache": reflectapi_demo.tests.basic.CacheStatus | null;
      }

      export type ResponseHeadersTestError = "Conflict";

      export interface RouteResponseHeaders {
        "cf-ray": string | null;
      }
    }
  }
}

namespace __implementation {

  function before__default(client: Client) {
    return (input: {}, headers: {}, options?: RequestOptions) =>
      __request<
        {},
        {},
        {},
        reflectapi_demo.tests.basic.ResponseHeadersTestError
      >(client, "/before.default", input, headers, options);
  }
  function with__default(client: Client) {
    return (input: {}, headers: {}, options?: RequestOptions) =>
      __request<
        {},
        {},
        {},
        reflectapi_demo.tests.basic.ResponseHeadersTestError,
        reflectapi_demo.tests.basic.ResponseHeaders
      >(client, "/with.default", input, headers, options, [
        "retry-after",
        "x-request-id",
        "x-expires-at",
        "x-cache",
      ]);
  }
  function infallible(client: Client) {
    return (input: {}, headers: {}, options?: RequestOptions) =>
      __request<{}, {}, {}, {}, reflectapi_demo.tests.basic.ResponseHeaders>(
        client,
        "/infallible",
        input,
        headers,
        options,
        ["retry-after", "x-request-id", "x-expires-at", "x-cache"],
      );
  }
  function with__route_headers(client: Client) {
    return (input: {}, headers: {}, options?: RequestOptions) =>
      __request<
        {},
        {},
        {},
        reflectapi_demo.tests.basic.ResponseHeadersTestError,
        reflectapi_demo.tests.basic.RouteResponseHeaders
      >(client, "/with.route_headers", input, headers, options, ["cf-ray"]);
  }
}
