reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_response_headers-3.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: rust
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name: response_headers_test

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        pub before: BeforeInterface<C>,
        pub with: WithInterface<C>,
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self {
                before: BeforeInterface::new(client.clone()),
                with: WithInterface::new(client.clone()),
                client,
            }
        }
        pub async fn infallible(
            &self,
            input: reflectapi::Empty,
            headers: reflectapi::Empty,
        ) -> Result<reflectapi::Empty, reflectapi::rt::Error<reflectapi::Empty, C::Error>> {
            reflectapi::rt::__request_impl(&self.client, "/infallible", input, headers).await
        }
    }

    #[cfg(feature = "reqwest")]
    impl Interface<reflectapi::rt::ReqwestClient<reqwest::Client>> {
        /// Convenience: build the client backed by a bare `reqwest::Client`
        /// and the given base URL. Hides the
        /// [`reflectapi::rt::ReqwestClient`] adapter so callers don't need
        /// to name it.
        pub fn try_new(
            client: reqwest::Client,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            Ok(Self::new(reflectapi::rt::ReqwestClient::try_new(
                client, base_url,
            )?))
        }
    }

    #[derive(Debug)]
    pub struct BeforeInterface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> BeforeInterface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn default(
            &self,
            input: reflectapi::Empty,
            headers: reflectapi::Empty,
        ) -> Result<
            reflectapi::Empty,
            reflectapi::rt::Error<
                super::types::reflectapi_demo::tests::basic::ResponseHeadersTestError,
                C::Error,
            >,
        > {
            reflectapi::rt::__request_impl(&self.client, "/before.default", input, headers).await
        }
    }

    #[derive(Debug)]
    pub struct WithInterface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> WithInterface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn default(
            &self,
            input: reflectapi::Empty,
            headers: reflectapi::Empty,
        ) -> Result<
            reflectapi::Empty,
            reflectapi::rt::Error<
                super::types::reflectapi_demo::tests::basic::ResponseHeadersTestError,
                C::Error,
            >,
        > {
            reflectapi::rt::__request_impl(&self.client, "/with.default", input, headers).await
        }
        pub async fn route_headers(
            &self,
            input: reflectapi::Empty,
            headers: reflectapi::Empty,
        ) -> Result<
            reflectapi::Empty,
            reflectapi::rt::Error<
                super::types::reflectapi_demo::tests::basic::ResponseHeadersTestError,
                C::Error,
            >,
        > {
            reflectapi::rt::__request_impl(&self.client, "/with.route_headers", input, headers)
                .await
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod basic {

                #[derive(Debug, serde::Deserialize)]
                pub enum CacheStatus {
                    Hit,
                    Miss,
                }

                #[derive(Debug, serde::Deserialize)]
                pub struct ResponseHeaders {
                    /// Seconds, or an HTTP date, after which to retry
                    #[serde(rename = "retry-after")]
                    pub retry_after: std::option::Option<std::string::String>,
                    #[serde(rename = "x-request-id")]
                    pub x_request_id: std::option::Option<std::string::String>,
                    #[serde(rename = "x-expires-at")]
                    pub x_expires_at: std::option::Option<chrono::DateTime<chrono::Utc>>,
                    #[serde(rename = "x-cache")]
                    pub x_cache: std::option::Option<
                        super::super::super::reflectapi_demo::tests::basic::CacheStatus,
                    >,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub enum ResponseHeadersTestError {
                    Conflict,
                }

                impl std::fmt::Display for ResponseHeadersTestError {
                    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
                        write!(f, "{}", reflectapi::rt::error_to_string(self))
                    }
                }

                impl std::error::Error for ResponseHeadersTestError {}

                #[derive(Debug, serde::Deserialize)]
                pub struct RouteResponseHeaders {
                    #[serde(rename = "cf-ray")]
                    pub cf_ray: std::option::Option<std::string::String>,
                }
            }
        }
    }
}
